# kisdhi-green-deploy

./: .gitignore  LOGIN_SYSTEM_TEST.md  README.md  TODO.md  test-login.html
backend/: .env.template  CLAUDE_API_SETUP.md  CLAUDE_IMPLEMENTATION_SUMMARY.md  README.md  VENV_SETUP.md  check_flow_data.py  check_http_urls.py  check_users_schema.py  pyproject.toml  requirements.txt  run_azure_migration.py  run_edges_migration.py  run_email_migration.py  run_migration.py  run_schema_fix.py  test_azure_connection.py  test_direct_sqlalchemy.py  test_openai_key.py  test_sqlalchemy_connection.py
backend/app/: __init__.py  config.py  database.py  exceptions.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  auth.py  flow.py  hearing.py  projects.py
backend/app/services/: ai.py
backend/app/utils/: error_handlers.py  sanitizer.py
backend/certs/: .gitkeep
backend/migrations/: add_actor_step_fields.sql  add_flow_edges_table.sql  add_position_to_flow_nodes.sql  add_users_table.sql  fix_users_email_nullable.sql  fix_users_schema_mismatch.sql
backend/tests/: conftest.py  test_ai_flow_generation_integration.py  test_ai_flow_generation_properties.py  test_config_validation.py  test_data_model_properties.py  test_database_error_handling.py  test_end_to_end_workflows.py  test_error_handlers.py  test_flow_endpoints.py  test_flow_manipulation_properties.py  test_hearing_endpoints.py  test_hearing_log_properties.py  test_mvp_scope_limitations.py  test_project_api_properties.py  test_project_endpoints.py  test_security_configuration_properties.py
(+174 files in other folders)
